API doc and functionality modifications
Updated api schema
Modified great product views
Added filtering backends
